<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">
    <LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:orientation="vertical" android:weightSum="1" android:layout_weight="0.34">
        <TextView android:id="@+id/tvtitle" android:text="@string/title" android:layout_width="266dp" android:layout_height="wrap_content" android:textSize="25dip"></TextView>
        <TextView android:id="@+id/tvtips" android:text="@string/tips" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_weight="0.26" android:textSize="18dip"></TextView>
    </LinearLayout>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/relativeLayout1" android:layout_weight="0.94">
        <Button android:layout_alignBaseline="@+id/btn_start" android:text="@string/pause" android:id="@+id/btn_pause_resume" android:tag="@string/pause" android:layout_marginRight="42dp" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_alignBottom="@+id/btn_start" android:layout_width="110dp"></Button>
        <Button android:layout_marginTop="35dp" android:text="@string/end" android:layout_alignRight="@+id/btn_start" android:id="@+id/btn_end" android:layout_below="@+id/btn_start" android:layout_height="wrap_content" android:layout_alignLeft="@+id/btn_start" android:layout_width="wrap_content"></Button>
        <Button android:layout_alignBaseline="@+id/btn_end" android:text="@string/reset" android:layout_alignRight="@+id/btn_pause_resume" android:id="@+id/btn_reset" android:layout_height="wrap_content" android:layout_alignLeft="@+id/btn_pause_resume" android:layout_alignBottom="@+id/btn_end" android:layout_width="wrap_content"></Button>
        <Button android:text="@string/start" android:id="@+id/btn_start" android:layout_height="wrap_content" android:layout_width="110dp" android:layout_alignParentTop="true" android:layout_toLeftOf="@+id/btn_pause_resume" android:layout_marginRight="16dp" android:layout_marginTop="17dp"></Button>
    </RelativeLayout>
    <RelativeLayout android:layout_width="match_parent" android:id="@+id/relativeLayout2" android:layout_height="50dp" android:layout_weight="0.09">
        <TextView android:text="@string/poweredby" android:layout_alignParentRight="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:textSize="20dip"/>
    </RelativeLayout>
</LinearLayout>
